plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

javafx {
    version = "17"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

group 'suic'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

sourceCompatibility = 17
targetCompatibility = 17

mainClassName = 'suic.AdventCalender'

tasks.withType(JavaCompile).all {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}


dependencies {
    implementation group: 'com.svetylkovo', name: 'rojo', version: '1.0.3'
    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    testCompileOnly 'org.projectlombok:lombok:1.18.22'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
    implementation group: 'com.google.guava', name: 'guava', version: '30.0-jre'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.0'
    implementation 'one.util:streamex:0.8.0'
    implementation group: 'net.objecthunter', name: 'exp4j', version: '0.4.8'
    implementation group: 'com.github.jshaptic', name: 'js4j', version: '0.1.1'
    implementation 'org.apache.commons:commons-math3:3.6.1'








}
